; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/dsa/mv88e6xxx/extr_chip.c_mv88e6xxx_setup_port_mode.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/dsa/mv88e6xxx/extr_chip.c_mv88e6xxx_setup_port_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mv88e6xxx_chip = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i64 }

@DSA_TAG_PROTO_DSA = common dso_local global i64 0, align 8
@DSA_TAG_PROTO_EDSA = common dso_local global i64 0, align 8
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mv88e6xxx_chip*, i32)* @mv88e6xxx_setup_port_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mv88e6xxx_setup_port_mode(%struct.mv88e6xxx_chip* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.mv88e6xxx_chip*, align 8
  %5 = alloca i32, align 4
  store %struct.mv88e6xxx_chip* %0, %struct.mv88e6xxx_chip** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.mv88e6xxx_chip*, %struct.mv88e6xxx_chip** %4, align 8
  %7 = getelementptr inbounds %struct.mv88e6xxx_chip, %struct.mv88e6xxx_chip* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 8
  %9 = load i32, i32* %5, align 4
  %10 = call i64 @dsa_is_dsa_port(i32 %8, i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %2
  %13 = load %struct.mv88e6xxx_chip*, %struct.mv88e6xxx_chip** %4, align 8
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @mv88e6xxx_set_port_mode_dsa(%struct.mv88e6xxx_chip* %13, i32 %14)
  store i32 %15, i32* %3, align 4
  br label %54

16:                                               ; preds = %2
  %17 = load %struct.mv88e6xxx_chip*, %struct.mv88e6xxx_chip** %4, align 8
  %18 = getelementptr inbounds %struct.mv88e6xxx_chip, %struct.mv88e6xxx_chip* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 8
  %20 = load i32, i32* %5, align 4
  %21 = call i64 @dsa_is_user_port(i32 %19, i32 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %27

23:                                               ; preds = %16
  %24 = load %struct.mv88e6xxx_chip*, %struct.mv88e6xxx_chip** %4, align 8
  %25 = load i32, i32* %5, align 4
  %26 = call i32 @mv88e6xxx_set_port_mode_normal(%struct.mv88e6xxx_chip* %24, i32 %25)
  store i32 %26, i32* %3, align 4
  br label %54

27:                                               ; preds = %16
  %28 = load %struct.mv88e6xxx_chip*, %struct.mv88e6xxx_chip** %4, align 8
  %29 = getelementptr inbounds %struct.mv88e6xxx_chip, %struct.mv88e6xxx_chip* %28, i32 0, i32 0
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** %29, align 8
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = load i64, i64* @DSA_TAG_PROTO_DSA, align 8
  %34 = icmp eq i64 %32, %33
  br i1 %34, label %35, label %39

35:                                               ; preds = %27
  %36 = load %struct.mv88e6xxx_chip*, %struct.mv88e6xxx_chip** %4, align 8
  %37 = load i32, i32* %5, align 4
  %38 = call i32 @mv88e6xxx_set_port_mode_dsa(%struct.mv88e6xxx_chip* %36, i32 %37)
  store i32 %38, i32* %3, align 4
  br label %54

39:                                               ; preds = %27
  %40 = load %struct.mv88e6xxx_chip*, %struct.mv88e6xxx_chip** %4, align 8
  %41 = getelementptr inbounds %struct.mv88e6xxx_chip, %struct.mv88e6xxx_chip* %40, i32 0, i32 0
  %42 = load %struct.TYPE_2__*, %struct.TYPE_2__** %41, align 8
  %43 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %42, i32 0, i32 0
  %44 = load i64, i64* %43, align 8
  %45 = load i64, i64* @DSA_TAG_PROTO_EDSA, align 8
  %46 = icmp eq i64 %44, %45
  br i1 %46, label %47, label %51

47:                                               ; preds = %39
  %48 = load %struct.mv88e6xxx_chip*, %struct.mv88e6xxx_chip** %4, align 8
  %49 = load i32, i32* %5, align 4
  %50 = call i32 @mv88e6xxx_set_port_mode_edsa(%struct.mv88e6xxx_chip* %48, i32 %49)
  store i32 %50, i32* %3, align 4
  br label %54

51:                                               ; preds = %39
  %52 = load i32, i32* @EINVAL, align 4
  %53 = sub nsw i32 0, %52
  store i32 %53, i32* %3, align 4
  br label %54

54:                                               ; preds = %51, %47, %35, %23, %12
  %55 = load i32, i32* %3, align 4
  ret i32 %55
}

declare dso_local i64 @dsa_is_dsa_port(i32, i32) #1

declare dso_local i32 @mv88e6xxx_set_port_mode_dsa(%struct.mv88e6xxx_chip*, i32) #1

declare dso_local i64 @dsa_is_user_port(i32, i32) #1

declare dso_local i32 @mv88e6xxx_set_port_mode_normal(%struct.mv88e6xxx_chip*, i32) #1

declare dso_local i32 @mv88e6xxx_set_port_mode_edsa(%struct.mv88e6xxx_chip*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
